tests/ui/coercion/fudge-inference/fudge-eager-resolve-breakage-2.stderr
error: implementation of `Fn` is not general enough
  --> $DIR/fudge-eager-resolve-breakage-2.rs:17:24
   |
LL |     let _: Server<_> = Server::new(|_| ());
   |                        ^^^^^^^^^^^ implementation of `Fn` is not general enough
   |
   = note: closure with signature `fn(&'2 mut i32)` must implement `Fn<(&'1 mut i32,)>`, for any lifetime `'1`...
   = note: ...but it actually implements `Fn<(&'2 mut i32,)>`, for some specific lifetime `'2`

error: implementation of `FnOnce` is not general enough
  --> $DIR/fudge-eager-resolve-breakage-2.rs:17:24
   |
LL |     let _: Server<_> = Server::new(|_| ());
   |                        ^^^^^^^^^^^ implementation of `FnOnce` is not general enough
   |
   = note: closure with signature `fn(&'2 mut i32)` must implement `FnOnce<(&'1 mut i32,)>`, for any lifetime `'1`...
   = note: ...but it actually implements `FnOnce<(&'2 mut i32,)>`, for some specific lifetime `'2`

error: aborting due to 2 previous errors

